// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ColorChanger No title (should use default) 1`] = `
<div
  className="main-container"
>
  <h2>
    React App Loaded!
  </h2>
  <h3
    className="app-name"
  >
    Color Changer App
  </h3>
  <p>
    Check this example app: change the color to see it reflected in the text next to it.
  </p>
  <div
    className="inner-container"
  >
    <select
      className="color-picker"
      onChange={[Function]}
    >
      <option
        value="black"
      >
        Black
      </option>
      <option
        value="green"
      >
        Green
      </option>
      <option
        value="red"
      >
        Red
      </option>
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
    <mock
      color="black"
    />
  </div>
</div>
`;

exports[`ColorChanger Some title 1`] = `
<div
  className="main-container"
>
  <h2>
    This is a test title
  </h2>
  <h3
    className="app-name"
  >
    Color Changer App
  </h3>
  <p>
    Check this example app: change the color to see it reflected in the text next to it.
  </p>
  <div
    className="inner-container"
  >
    <select
      className="color-picker"
      onChange={[Function]}
    >
      <option
        value="black"
      >
        Black
      </option>
      <option
        value="green"
      >
        Green
      </option>
      <option
        value="red"
      >
        Red
      </option>
      <option
        value="blue"
      >
        Blue
      </option>
      <option
        value="purple"
      >
        Purple
      </option>
    </select>
    <mock
      color="black"
    />
  </div>
</div>
`;
